--- a/assets/scss/5-components/_footnotes.scss
+++ b/assets/scss/5-components/_footnotes.scss
@@ -3,8 +3,9 @@
     border-radius: .5rem;
     display: flex;
     flex-direction: column;
-    margin-top: 2rem;
     padding: 1rem;
+    max-width: 65em;
+    margin: 2rem auto 0;
 
     @media only screen and (min-width: 1000px) {
         flex-direction: row;
